# cg_2025spring_labs

./: .gitignore  CMakeLists.txt
archive/: lab2.cpp  routating.cpp
archive/lab5/include/: Camera.h  FontRender.h  Mesh.h  Model.h  utils.h
archive/lab5/shaders/: light_cube.fs  model_fragment_shader.fs  text_fragment_shader.fs
archive/lab5/src/: Camera.cpp  Mesh.cpp  glad.c
demos/: lab1.html  lab2.html  lab2.md  lab3.html  lab3.md
docs/: lab2.html  lab3.html  lab3.md  lab4.html  lab4.md  lab5.html  lab5.md  lab6.html  lab6.md  lab7.md
include/: Camera.h  FontRender.h  Mesh.h  Model.h  Shader.h  ShaderLoader.h  utils.h
include/glad/: glad.h
include/learnopengl/: camera.h  mesh.h  shader.h  shader_m.h
report/: lab1.md
shaders/: fragment_shader.fs  grass.fs  grass.gs  grass.vs  model_fragment_shader.fs  model_vertex_shader.vs  skybox.fs  skybox.vs  tex_only.fs  tex_only.vs  text_vertex_shader.vs  vertex_shader.vs
src/: Camera.cpp  FontRender.cpp  Mesh.cpp  Model.cpp  Shader.cpp  ShaderLoader.cpp  main.cpp  utils.cpp
